Cleaned up some formatting issues with the new HTML formatter.

--- a/test/html/test.html
+++ b/test/html/test.html
@@ -10,14 +10,18 @@
                     <div class="type">Catalog</div>
                     <div class="association">
                         <div class="key" style="width:11ch">
-                            <div class="element symbol">Author</div></div>
+                            <div class="element symbol">Author</div>
+                        </div>
+                        <div class="colon">:</div>
                         <div class="value">
                             <div class="element text">"Jane Austen"</div>
                         </div>
                     </div>
                     <div class="association">
                         <div class="key" style="width:11ch">
-                            <div class="element symbol">Females</div></div>
+                            <div class="element symbol">Females</div>
+                        </div>
+                        <div class="colon">:</div>
                         <div class="value">
                             <div class="list">
                                 <div class="type">List</div>
@@ -35,7 +39,9 @@
                     </div>
                     <div class="association">
                         <div class="key" style="width:11ch">
-                            <div class="element symbol">Interested</div></div>
+                            <div class="element symbol">Interested</div>
+                        </div>
+                        <div class="colon">:</div>
                         <div class="value">
                             <pre class="element procedure">{
     if suitor is "Mr. Darcy" then {
