Changed the font family in the style sheet to be Roboto and Roboto Mono.

--- a/test/html/citation.html
+++ b/test/html/citation.html
@@ -9,7 +9,7 @@
                 <div class="catalog">
                     <div class="type">Citation</div>
                     <div class="association">
-                        <div class="key" style="width:10ch">
+                        <div class="key" style="width:11ch">
                             <div class="element symbol">protocol</div>
                         </div>
                         <div class="colon">:</div>
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:10ch">
+                        <div class="key" style="width:11ch">
                             <div class="element symbol">timestamp</div>
                         </div>
                         <div class="colon">:</div>
@@ -27,16 +27,16 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:10ch">
+                        <div class="key" style="width:11ch">
                             <div class="element symbol">tag</div>
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element tag">AT4RKN3VJDH1MTP9BWP1L3Z96PP36218</div>
+                            <pre class="element tag">AT4RKN3VJDH1MTP9BWP1L3Z96PP36218</pre>
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:10ch">
+                        <div class="key" style="width:11ch">
                             <div class="element symbol">version</div>
                         </div>
                         <div class="colon">:</div>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:10ch">
+                        <div class="key" style="width:11ch">
                             <div class="element symbol">digest</div>
                         </div>
                         <div class="colon">:</div>
