--- a/test/html/components.html
+++ b/test/html/components.html
@@ -9,7 +9,7 @@
                 <div class="catalog">
                     <div class="type">Catalog</div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">empty</div>
                         </div>
                         <div class="colon">:</div>
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">range</div>
                         </div>
                         <div class="colon">:</div>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">list</div>
                         </div>
                         <div class="colon">:</div>
@@ -100,7 +100,7 @@
                                             <div class="element pattern">none</div>
                                         </div>
                                         <div class="item">
-                                            <div class="element tag">L7JJGPAYAH7T55J5Q9Q75RRL0SVW8F1X76HWW90CHJJQAH6270DH</div>
+                                            <pre class="element tag">L7JJGPAYAH7T55J5Q9Q75RRL0SVW8F1X76HWW90CHJJQAH6270DH</pre>
                                         </div>
                                         <div class="item">
                                             <div class="element symbol">symbol</div>
@@ -156,7 +156,7 @@
                                             <div class="catalog">
                                                 <div class="type">Catalog</div>
                                                 <div class="association">
-                                                    <div class="key" style="width:4ch">
+                                                    <div class="key" style="width:5ch">
                                                         <div class="element symbol">foo</div>
                                                     </div>
                                                     <div class="colon">:</div>
@@ -165,7 +165,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="association">
-                                                    <div class="key" style="width:4ch">
+                                                    <div class="key" style="width:5ch">
                                                         <div class="element symbol">bar</div>
                                                     </div>
                                                     <div class="colon">:</div>
@@ -174,7 +174,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="association">
-                                                    <div class="key" style="width:4ch">
+                                                    <div class="key" style="width:5ch">
                                                         <div class="element symbol">baz</div>
                                                     </div>
                                                     <div class="colon">:</div>
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">catalog</div>
                         </div>
                         <div class="colon">:</div>
@@ -198,7 +198,7 @@
                             <div class="catalog">
                                 <div class="type">Catalog</div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element reserved">a</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -207,7 +207,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element reserved">b</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -216,7 +216,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element reserved">c</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -225,7 +225,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element text">"certain"</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -234,7 +234,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element text">"iffy"</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -243,7 +243,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element text">"impossible"</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element pattern">"^.*$"?</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -261,16 +261,16 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
-                                        <div class="element tag">665VRFNFZMQX09TSKHJSD1HL567F4FF7</div>
+                                    <div class="key" style="width:35ch">
+                                        <pre class="element tag">665VRFNFZMQX09TSKHJSD1HL567F4FF7</pre>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element tag">CT41AC8K5AZBMJF88W60F40SZQCMA0XN (size: 20)</div>
+                                        <pre class="element tag">CT41AC8K5AZBMJF88W60F40SZQCMA0XN (size: 20)</pre>
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element symbol">foo</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -279,7 +279,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element name">/name</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -288,7 +288,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element moment">2017-04-01</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -297,7 +297,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <a class="element reference" href="https://craterdog.com/">craterdog.com/</a>
                                     </div>
                                     <div class="colon">:</div>
@@ -306,7 +306,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element version">1</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -315,7 +315,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element text">"key"</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -324,7 +324,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <pre class="element binary">MMNBXR9TC237PK269GLFZ4J4XA4R9LF1</pre>
                                     </div>
                                     <div class="colon">:</div>
@@ -333,7 +333,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element probability">true</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -342,7 +342,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element angle">π</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -351,7 +351,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element number">τ</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -360,7 +360,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element number">()</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -369,7 +369,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element symbol">sequence</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -394,7 +394,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element symbol">table</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -402,7 +402,7 @@
                                         <div class="catalog">
                                             <div class="type">Foo</div>
                                             <div class="association">
-                                                <div class="key" style="width:2ch">
+                                                <div class="key" style="width:3ch">
                                                     <div class="element symbol">a</div>
                                                 </div>
                                                 <div class="colon">:</div>
@@ -411,7 +411,7 @@
                                                 </div>
                                             </div>
                                             <div class="association">
-                                                <div class="key" style="width:2ch">
+                                                <div class="key" style="width:3ch">
                                                     <div class="element symbol">b</div>
                                                 </div>
                                                 <div class="colon">:</div>
@@ -420,7 +420,7 @@
                                                 </div>
                                             </div>
                                             <div class="association">
-                                                <div class="key" style="width:2ch">
+                                                <div class="key" style="width:3ch">
                                                     <div class="element symbol">c</div>
                                                 </div>
                                                 <div class="colon">:</div>
@@ -429,7 +429,7 @@
                                                 </div>
                                             </div>
                                             <div class="association">
-                                                <div class="key" style="width:2ch">
+                                                <div class="key" style="width:3ch">
                                                     <div class="element symbol">d</div>
                                                 </div>
                                                 <div class="colon">:</div>
@@ -438,7 +438,7 @@
                                                 </div>
                                             </div>
                                             <div class="association">
-                                                <div class="key" style="width:2ch">
+                                                <div class="key" style="width:3ch">
                                                     <div class="element symbol">e</div>
                                                 </div>
                                                 <div class="colon">:</div>
@@ -458,7 +458,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:34ch">
+                                    <div class="key" style="width:35ch">
                                         <div class="element symbol">procedure</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -476,7 +476,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">procedures</div>
                         </div>
                         <div class="colon">:</div>
@@ -506,7 +506,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">binaries</div>
                         </div>
                         <div class="colon">:</div>
@@ -546,7 +546,7 @@ DW411WRC0YS71NWKA93S
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
+                        <div class="key" style="width:12ch">
                             <div class="element symbol">moments</div>
                         </div>
                         <div class="colon">:</div>
