--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -9,16 +9,16 @@
                 <div class="catalog">
                     <div class="type">Transaction</div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">transactionId</div>
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="element tag">LYZ6PJ9GBABSF18MQMBSJDV7KAPV4MS7</div>
+                            <pre class="element tag">LYZ6PJ9GBABSF18MQMBSJDV7KAPV4MS7</pre>
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">timestamp</div>
                         </div>
                         <div class="colon">:</div>
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">consumer</div>
                         </div>
                         <div class="colon">:</div>
@@ -35,16 +35,16 @@
                             <div class="catalog">
                                 <div class="type">Catalog</div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">accountId</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element tag">SFNYCS6WTNCAVQ43DDS9HQJQX2A1XAPZ</div>
+                                        <pre class="element tag">SFNYCS6WTNCAVQ43DDS9HQJQX2A1XAPZ</pre>
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">email</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">merchant</div>
                         </div>
                         <div class="colon">:</div>
@@ -64,16 +64,16 @@
                             <div class="catalog">
                                 <div class="type">Catalog</div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">accountId</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element tag">GYR0D0N7D7RGLAMM50TA7YYP9TRCYFF0</div>
+                                        <pre class="element tag">GYR0D0N7D7RGLAMM50TA7YYP9TRCYFF0</pre>
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">name</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">items</div>
                         </div>
                         <div class="colon">:</div>
@@ -96,7 +96,7 @@
                                     <div class="catalog">
                                         <div class="type">Catalog</div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">name</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -105,7 +105,7 @@
                                             </div>
                                         </div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">version</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -114,7 +114,7 @@
                                             </div>
                                         </div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">quantity</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -123,7 +123,7 @@
                                             </div>
                                         </div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">price</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -137,7 +137,7 @@
                                     <div class="catalog">
                                         <div class="type">Catalog</div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">name</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -146,7 +146,7 @@
                                             </div>
                                         </div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">version</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -155,7 +155,7 @@
                                             </div>
                                         </div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">quantity</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -164,7 +164,7 @@
                                             </div>
                                         </div>
                                         <div class="association">
-                                            <div class="key" style="width:9ch">
+                                            <div class="key" style="width:10ch">
                                                 <div class="element symbol">price</div>
                                             </div>
                                             <div class="colon">:</div>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">tax</div>
                         </div>
                         <div class="colon">:</div>
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:14ch">
+                        <div class="key" style="width:15ch">
                             <div class="element symbol">total</div>
                         </div>
                         <div class="colon">:</div>
