--- a/test/html/certificate.html
+++ b/test/html/certificate.html
@@ -9,7 +9,7 @@
                 <div class="catalog">
                     <div class="type">Document</div>
                     <div class="association">
-                        <div class="key" style="width:12ch">
+                        <div class="key" style="width:13ch">
                             <div class="element symbol">component</div>
                         </div>
                         <div class="colon">:</div>
@@ -17,7 +17,7 @@
                             <div class="catalog">
                                 <div class="type">Certificate</div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">protocol</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -26,7 +26,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">timestamp</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -35,16 +35,16 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">account</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element tag">MXKSMY9AJLJMFKDW5RBY3LQLQ33WM01L</div>
+                                        <pre class="element tag">MXKSMY9AJLJMFKDW5RBY3LQLQ33WM01L</pre>
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">publicKey</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -64,7 +64,7 @@
                                         <div class="element symbol">tag</div></div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element tag">AT4RKN3VJDH1MTP9BWP1L3Z96PP36218</div>
+                                        <pre class="element tag">AT4RKN3VJDH1MTP9BWP1L3Z96PP36218</pre>
                                     </div>
                                 </div><div class="association">
                                     <div class="key" style="width:12ch">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:12ch">
+                        <div class="key" style="width:13ch">
                             <div class="element symbol">protocol</div>
                         </div>
                         <div class="colon">:</div>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:12ch">
+                        <div class="key" style="width:13ch">
                             <div class="element symbol">timestamp</div>
                         </div>
                         <div class="colon">:</div>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:12ch">
+                        <div class="key" style="width:13ch">
                             <div class="element symbol">certificate</div>
                         </div>
                         <div class="colon">:</div>
@@ -118,7 +118,7 @@
                             <div class="catalog">
                                 <div class="type">Citation</div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">protocol</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">timestamp</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -136,16 +136,16 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">tag</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element tag">AT4RKN3VJDH1MTP9BWP1L3Z96PP36218</div>
+                                        <pre class="element tag">AT4RKN3VJDH1MTP9BWP1L3Z96PP36218</pre>
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">version</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -154,7 +154,7 @@
                                     </div>
                                 </div>
                                 <div class="association">
-                                    <div class="key" style="width:10ch">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">digest</div>
                                     </div>
                                     <div class="colon">:</div>
@@ -177,7 +177,7 @@ TG597FVQJ33GHV382FNSVYBXDYMRF6KDBSS3LGQ3VDH
                         </div>
                     </div>
                     <div class="association">
-                        <div class="key" style="width:12ch">
+                        <div class="key" style="width:13ch">
                             <div class="element symbol">signature</div>
                         </div>
                         <div class="colon">:</div>
