Added real path to the Bali Nebula logo and style sheet.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://bali-nebula.net/web/style/BDN.css">
     </head>
     <body>
         <div class="document">
@@ -572,7 +572,7 @@ DW411WRC0YS71NWKA93S
             </div>
         </div>
         <div class="poweredBy">
-            <img class="logo" src="logo.png" alt="Powered By">
+            <img class="logo" src="https://bali-nebula.net/web/images/PoweredByLogo.png" alt="Powered By">
             <div class="company">Powered by Crater Dog Technologies™</div>
         </div>
     </body>
