Fixed error in bali-nebula path. Updated the release version to patch v2.4.1.

--- a/test/html/certificate.html
+++ b/test/html/certificate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://bali-nebula.net/statics/styles/BDN.css">
+        <link rel="stylesheet" href="https://bali-nebula.net/repository/statics/styles/BDN.css">
     </head>
     <body>
         <div class="document">
@@ -200,7 +200,7 @@ VWLQXQFCDM3M9NQ03N8TCQ0GXAFWQXB5B3PY9VJYLYYK4KHQ64HZF630R5JM
             </div>
         </div>
         <div class="poweredBy">
-            <img class="logo" src="https://bali-nebula.net/statics/images/PoweredByLogo.png" alt="Powered By">
+            <img class="logo" src="https://bali-nebula.net/repository/statics/images/PoweredByLogo.png" alt="Powered By">
             <div class="company">Powered by Crater Dog Technologies™</div>
         </div>
     </body>
