--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://bali-nebula.net/statics/styles/BDN.css">
+        <link rel="stylesheet" href="https://bali-nebula.net/repository/statics/styles/BDN.css">
     </head>
     <body>
         <div class="document">
@@ -215,7 +215,7 @@
             </div>
         </div>
         <div class="poweredBy">
-            <img class="logo" src="https://bali-nebula.net/statics/images/PoweredByLogo.png" alt="Powered By">
+            <img class="logo" src="https://bali-nebula.net/repository/statics/images/PoweredByLogo.png" alt="Powered By">
             <div class="company">Powered by Crater Dog Technologies™</div>
         </div>
     </body>
