--- a/test/html/test.html
+++ b/test/html/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://bali-nebula.net/repository/statics/styles/BDN.css">
+        <link rel="stylesheet" href="https://bali-nebula.net/static/styles/BDN.css">
     </head>
     <body>
         <div class="document">
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="poweredBy">
-            <img class="logo" src="https://bali-nebula.net/repository/statics/images/PoweredByLogo.png" alt="Powered By">
+            <img class="logo" src="https://bali-nebula.net/static/images/PoweredByLogo.png">
             <div class="company">Powered by Crater Dog Technologies™</div>
         </div>
     </body>
