--- a/test/html/citation.html
+++ b/test/html/citation.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico"/>
+        <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"/>
         <link rel="stylesheet" href="https://bali-nebula.net/static/styles/BDN.css">
     </head>
     <body>
